test262: @isConstructor incorrectly thinks Math.cos is a constructor https://bugs.webkit.org/show_bug.cgi?id=163437

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-10-14
Reviewed by Saam Barati.

JSTests:

* stress/is-constructor.js: Added.
(assert):
(prototype.assert):
New test to cover the @isConstructor builtin.

* test262.yaml:
Test now passes.

Source/JavaScriptCore:

* runtime/JSFunction.cpp:
(JSC::JSFunction::getConstructData):
By default, Host JSFunctions are not constructable. They get
the default callHostFunctionAsConstructor native constructor.
When getting construct data we can return ConstructType::None
in these cases instead of indicating it might be constructable
and later throwing an exception when construction is attempted.

Canonical link: https://commits.webkit.org/181266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207347 268f45cc-cd09-0410-ab3c-d52691b4dbfc